tests/paczka1/fuzzy1/98189643.err
Error in line 6: Oef8RFacZD8 A228 47,1
Error in line 1: 8y2lOwAV A453 54,9
Error in line 8: Oef8RFacZD8 S351 35,2
